standardizing layouts and subnavs in subsites

--- a/rebuildingakidney/citing/index.html
+++ b/rebuildingakidney/citing/index.html
@@ -23,10 +23,10 @@ title: Citing RBK
 
 <h2><a name="citing-data-associated-with-a-publication" class="anchor"></a>Citing Data Associated with a Publication</h2>
 
-<p>To enhance reproducibility and ensure that appropriate credit is made for data creation, data users are <em>strongly</em> encouraged to also cite the related data DOIs or RIDs (Resource IDs) where appropriate to identify specific data entries for their readers. This creates a durable link from the manuscript to the large datasets that support the analysis and conclusions of the publication. </p>
+<p>To enhance reproducibility and ensure that appropriate credit is made for data creation, data users are <em>strongly</em> encouraged to also cite the related data DOIs or RIDs (Record IDs) where appropriate to identify specific data entries for their readers. This creates a durable link from the manuscript to the large datasets that support the analysis and conclusions of the publication. </p>
 [<p>To enhance reproducibility...RBK members are strongly encouraged to create a Data Collection for their publication. This is an adhoc, manually created dataset that collects all data related to a paper into one page with a related DOI - see <a href="">Creating Citable Data Collections</a>]
 
-<p>In support of primary publications, ATLAS-D2K issues individual Digital Object Identifiers (DOIs) and RIDs (Resource IDentifiers) that serve as persistent identifiers and links to data <em>entries</em> in the ATLAS-D2K data repository. When possible, these DOIs or RIDs are included in the manuscripts published by consortium members as direct pointers to specific data hosted in the ATLAS-D2K data repository.</p>
+<p>In support of primary publications, ATLAS-D2K issues individual Digital Object Identifiers (DOIs) and RIDs (Record IDentifiers) that serve as persistent identifiers and links to data <em>entries</em> in the ATLAS-D2K data repository. When possible, these DOIs or RIDs are included in the manuscripts published by consortium members as direct pointers to specific data hosted in the ATLAS-D2K data repository.</p>
 <p>Data citations may be included in the bibliography of the paper and cited similarly to other types of publications in a manuscript. The exact format for data citation will vary from journal to journal, but in general, the citation should include the following elements:</p>
 <ul>
 <li>Author(s)
@@ -79,7 +79,7 @@ title: Citing RBK
 
 <h2><a name="links-to-rbk-resources" class="anchor"></a>Links to RBK Resources</h2>
 
-<p>With the exception of the main ATLAS-D2K site (<a href="http://www.atlas-d2k.org">www.atlas-d2k.org</a>), links to data entries within the site should never be used. Only persistent identifiers such as DOIs or Resource IDentifiers (RIDs) obtained from the &quot;Share and Cite&quot; button (e.g. URLs in the form <a href="https://www.atlas-d2k.org/id/14-4KG6">https://www.atlas-d2k.org/id/14-4KG6</a>) are guaranteed to work at all times. The ATLAS-D2K Center makes no commitment to maintain links that do not follow these guidelines.</p>
+<p>With the exception of the main ATLAS-D2K site (<a href="http://www.atlas-d2k.org">www.atlas-d2k.org</a>), links to data entries within the site should never be used. Only persistent identifiers such as DOIs or Record IDentifiers (RIDs) obtained from the &quot;Share and Cite&quot; button (e.g. URLs in the form <a href="https://www.atlas-d2k.org/id/14-4KG6">https://www.atlas-d2k.org/id/14-4KG6</a>) are guaranteed to work at all times. The ATLAS-D2K Center makes no commitment to maintain links that do not follow these guidelines.</p>
 
 <h2><a name="for-further-information" class="anchor"></a>For Further Information</h2>
 
