hard coding assay number; initial code for gudmap chart

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -53,6 +53,14 @@ tags: []
         </ul>
       </div>
     </div>
+    <div class="row">
+
+    <div class="col-md-12">
+          <iframe class="embed-responsive" name="resources-viewer" id="resources-viewer" style="width: 675px; height: 350px; border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/plot/?config=gudmap-data-summary">
+          </iframe>
+    </div>
+
+    </div>
   </div>
 </div>
   <div class="col-md-4 featured">
