--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ custom_js:
                         <i class="stat-icon fa-solid fa-flask"></i>
                         <div>
                             <h2 class="stat-number">
-                              <a href="#">
+                              <a href="/deriva-webapps/plot/?config=all-data-summary">20
 
-                              <span class="stat-number" id="stat-assay-number">
-                                <!-- spinner -->
+                            <!--  <span class="stat-number" id="stat-assay-number">
+                                 spinner
                                 <i class="fas fa-sync-alt fa-spin"></i>
                               </span>
-
+                              -->
                             </a></h2>
                             <p class="statistic-label">Assay Types</p>
                         </div>
