styling homepage carousel links; updating publications

--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@ custom_js:
   <div class="col-md-4">
     <h3>Recent Publications</h3>
     <ul class="posts">
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a></li>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in {Pax3} spina bifida mutants underlies deficits of bladder innervation and function</a></li>
-      <li><a href="https://doi.org/10.1152/ajprenal.00431.2020">A Uropathogenic E. coli UTI89 model of prostatic inflammation and collagen accumulation for use in studying aberrant collagen production in the prostate</a></li>
-
+      <li><a href="https://doi.org/10.1152/ajpcell.00288.2022">Functional maturation of kidney organoid tubules: PIEZO1-mediated Ca2+ signaling</a> <small><em>(American Physiological Society - Cell Physiology, 2023, RBK)</em></small></li>
+      <li><a href="https://doi.org/10.1681/asn.0000000000000057">Lineage Tracing and Single-Nucleus Multiomics Reveal Novel Features of Adaptive and Maladaptive Repair after Acute Kidney Injury</a> <small><em>(JASN, 2023, RBK)</em></small></li>
+      <li><a href="https://doi.org/10.1016/B978-0-12-823318-4.00037-8">Chapter 18 - Stress-induced senescence of tubular cells</a> <small><em>(Regenerative Nephrology, 2022, RBK)</em></small></li>
+      <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADYWIW46cAWNeo1AA@sort(Year::desc::,Month::desc::,RID::desc::)">more publications ></a></li>
     </ul>
   </div>
   <div class="col-md-4">
