#29 updated home page to fetch stats from ermrest

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: ATLAS-D2K - Transforming Data into Knowledge
 custom_js:
-#  - home-stat-queries
+  - home-stat-queries
 ---
 
 <div class="row homeBanner">
@@ -70,10 +70,9 @@ custom_js:
                         <i class="stat-icon fa-solid fa-flask"></i>
                         <div>
                             <h2 class="stat-number">
-                              <a href="#">
+                              <a href="/deriva-webapps/plot/?config=all-data-summary">
 
                               <span class="stat-number" id="stat-assay-number">
-                                <!-- spinner -->
                                 <i class="fas fa-sync-alt fa-spin"></i>
                               </span>
 
@@ -89,13 +88,11 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-vial"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AwpjBFeEesKKK0SegDMA1jgCeIALoBfIQCUAkgBETQrAAsU3XEkoBFALQBNAGwAjACyJqZmQA@sort(RCT::desc::,Stage_Ordinal,RID)">14,228
-                            <!--
+                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AwpjBFeEesKKK0SegDMA1jgCeIALoBfIQCUAkgBETQrAAsU3XEkoBFALQBNAGwAjACyJqZmQA@sort(RCT::desc::,Stage_Ordinal,RID)">
                             <span class="stat-number" id="stat-specimen-number">
-
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
-                            -->
+                            
                           </a></h2>
                           <p class="statistic-label">Specimen</p>
                       </div>
@@ -108,13 +105,10 @@ custom_js:
                 <div class="statistic-container">
                     <i class="stat-icon fa-solid fa-microscope"></i>
                     <div>
-                        <h2 class="stat-number"><a href="#">12,925
-                          <!--
+                        <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqCIB4+-qbBoQAaAMxUAJqRXr5Uskme7payjIYmyOjYeAigxGRoFAjUtAws7Jw8fMGi4lIyAMKYYES8EPTCRF1oSFq6+sZmVjYg9o7OlACKnvHurgCyucZAA@sort(RCT::desc::,Stage_Ordinal,RID)">
                           <span class="stat-number" id="stat-imaging-number">
-
                             <i class="fas fa-sync-alt fa-spin"></i>
                           </span>
-                          -->
                         </a></h2>
                         <p class="statistic-label">Imaging</p>
                     </div>
@@ -127,13 +121,11 @@ custom_js:
                 <div class="statistic-container">
                     <i class="stat-icon fa-solid fa-dna"></i>
                     <div>
-                        <h2 class="stat-number"><a href="#">237
-                          <!--
+                        <h2 class="stat-number"><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOrsIACMAGyJ8QDSNF45uQDsiZwAnMUALDlJackATPpGyOjYeLAgAMKYYGKEKBBSYiNoceFRMThxVlQ4ADY4YEh4hoZAA@sort(RMT::desc::,RID)">
                           <span class="stat-number" id="stat-transcriptomics-number">
-
                             <i class="fas fa-sync-alt fa-spin"></i>
                           </span>
-                          -->
+                          
                           </a>
                         </h2>
                         <p class="statistic-label">Transcriptomics</p>
@@ -152,14 +144,10 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-clone"></i>
                       <div>
-                          <h2 class="stat-number"><a href="#">
-                            18
-                            <!--
+                          <h2 class="stat-number"><a href="/resources/cell-lines/">
                             <span class="stat-number" id="stat-cell-lines-number">
-
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
-                            -->
                           </a></h2>
                           <p class="statistic-label">Cell Lines</p>
                       </div>
@@ -172,13 +160,10 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-list"></i>
                       <div>
-                          <h2 class="stat-number"><a href="#">176
-                            <!--
+                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)">
                             <span class="stat-number" id="stat-protocols-number">
-
                             <i class="fas fa-sync-alt fa-spin"></i>
                           </span>
-                          -->
                       </a></h2>
                           <p class="statistic-label">Protocols</p>
                       </div>
@@ -191,13 +176,10 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-droplet"></i>
                       <div>
-                          <h2 class="stat-number"><a href="#">302
-                            <!--
+                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)">
                             <span class="stat-number" id="stat-antibody-validation-number">
-
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
-                            -->
                           </a></h2>
                           <p class="statistic-label">Antibody Validation</p>
                       </div>
@@ -210,13 +192,10 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-newspaper"></i>
                       <div>
-                          <h2 class="stat-number"><a href="#">185
-                            <!--
+                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABYWIW46cA2Neo1AA@sort(Year::desc::,Month::desc::,RID::desc::)?pcid=navbar/recordset&ppid=23vl276c1oam2l7l2etv1eko">
                             <span class="stat-number" id="stat-pubs-number">
-
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
-                            -->
                           </a></h2>
                           <p class="statistic-label">Publications</p>
                       </div>
